Possibilité de choisir et d'ajouter des pseudos + affichage de la liste des parties dont on peut consulté l'historique (= popup en appuyant sur "Historique" dans le menu

--- a/src/Traductions/base_traductions/boutons_fr.properties
+++ b/src/Traductions/base_traductions/boutons_fr.properties
@@ -8,3 +8,5 @@ statistiques = Statistiques
 options = Options
 credits = Crédits
 quitter = Quitter
+retourMenu = Retour au menu
+ajouterPseudo = Nouveau joueur
