--- a/src/Traductions/boutons_fr.properties
+++ b/src/Traductions/boutons_fr.properties
@@ -8,3 +8,5 @@ statistiques = Statistiques
 options = Options
 credits = Cr\u00e9dits
 quitter = Quitter
+retourMenu = Retour au menu
+ajouterPseudo = Nouveau joueur
