Possibilité de revoir une partie finie

--- a/src/Traductions/base_traductions/boutons_fr.properties
+++ b/src/Traductions/base_traductions/boutons_fr.properties
@@ -10,3 +10,6 @@ credits = Crédits
 quitter = Quitter
 retourMenu = Retour au menu
 ajouterPseudo = Nouveau joueur
+retour = Menu
+precedent = precedent
+suivant = suivant
