--- a/src/Traductions/boutons_fr.properties
+++ b/src/Traductions/boutons_fr.properties
@@ -1,4 +1,4 @@
-titre = Kamisado
+titre= Kamisado
 partieLocale = Partie locale
 defierIA = D\u00e9fier l'IA
 partieReseau = Partie r\u00e9seau
@@ -10,3 +10,6 @@ credits = Cr\u00e9dits
 quitter = Quitter
 retourMenu = Retour au menu
 ajouterPseudo = Nouveau joueur
+retour = Menu
+precedent = precedent
+suivant = suivant
