Ajout de la partie rapide: VUE : Menu + 1 bouton MODEL : Acceuil + 1 constructeur sans BDD

--- a/src/Traductions/boutons_fr.properties
+++ b/src/Traductions/boutons_fr.properties
@@ -1,4 +1,5 @@
-titre = Kamisado
+titre= Kamisado
+partieRapide = Partie rapide
 partieLocale = Partie locale
 defierIA = D\u00e9fier l'IA
 partieReseau = Partie r\u00e9seau
