Rectification visuel barre de menu en haut + traductions du menu à jour

--- a/src/Traductions/boutons_fr.properties
+++ b/src/Traductions/boutons_fr.properties
@@ -1,4 +1,4 @@
-titre= Kamisado
+titre = Kamisado
 partieRapide = Partie rapide
 partieLocale = Partie locale
 defierIA = D\u00e9fier l'IA
@@ -14,3 +14,4 @@ ajouterPseudo = Nouveau joueur
 retour = Menu
 precedent = precedent
 suivant = suivant
+undo = undo
