Vues pour rejoindre et creer une partie en réseau

--- a/src/Traductions/base_traductions/boutons_fr.properties
+++ b/src/Traductions/base_traductions/boutons_fr.properties
@@ -2,7 +2,7 @@ titre = Kamisado
 partieRapide = Partie rapide
 partieLocale = Partie locale
 defierIA = Défier l'IA
-partieReseau = Partie réseau
+partieReseau = C'est parti !
 chargerPartie = Charger une partie
 historique = Historique
 statistiques = Statistiques
@@ -17,3 +17,6 @@ suivant = suivant
 undo = undo
 musiqueOn = on
 musiqueOff = off
+rejoindrePartie = Rejoindre la partie
+rejoindreUnePartieEnReseau = Rejoindre une partie en réseau
+creerUnePartieEnReseau = Créer une partie en réseau
