--- a/src/Traductions/boutons_fr.properties
+++ b/src/Traductions/boutons_fr.properties
@@ -2,7 +2,7 @@ titre = Kamisado
 partieRapide = Partie rapide
 partieLocale = Partie locale
 defierIA = D\u00e9fier l'IA
-partieReseau = Partie r\u00e9seau
+partieReseau = C'est parti !
 chargerPartie = Charger une partie
 historique = Historique
 statistiques = Statistiques
@@ -17,3 +17,6 @@ suivant = suivant
 undo = undo
 musiqueOn = on
 musiqueOff = off
+rejoindrePartie = Rejoindre la partie
+rejoindreUnePartieEnReseau = Rejoindre une partie en r\u00e9seau
+creerUnePartieEnReseau = Cr\u00e9er une partie en r\u00e9seau
